--- a/src/station3.html
+++ b/src/station3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/station3.css" type="text/css">
+    <link rel="stylesheet" href="./assets/css/station3.css" type="text/css" />
     <title>Station 3</title>
   </head>
   <body>
@@ -16,3 +16,4 @@
     </div>
   </body>
 </html>
+<link rel="stylesheet" href="src/station3.css" />
