--- a/src/station4.html
+++ b/src/station4.html
@@ -1,1 +1,24 @@
-<!doctype html>
+﻿<!doctype html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Station 4</title>
+  <link rel="stylesheet" href="station4.css" />
+</head>
+<body>
+  <header>Header</header>
+
+  <main>
+    <div class="card">
+      <img src="./assets/image/railway-thumbnail.png" class="card__img-top" alt="TechTrainのサムネイル画像" />
+      <p class="card__title">TechTrainの使い方</p>
+      <p class="card__description">TechBowl</p>
+      <p class="card__description">Suguru Ohki</p>
+      <p class="card__description">6,722 回視聴・2021/04/22</p>
+    </div>
+  </main>
+
+  <footer>Footer</footer>
+</body>
+</html>
